# poetry

./: .gitignore  Justfile  README.md  pyproject.toml
configs/: README.md
configs/asr/: whisper_lora_baseline.json  whisper_lora_replay_mix.json
configs/audio/: arousal_mlp.json  audio_cnn.json
configs/text/: arapoem_emotion.json  arapoem_genre.json
data/processed/: test.jsonl  (+4 more)
docs/: MAAI7103_intermediate_report.html  experiment_ledger.md  final_report.md  soft-cer-methodology.md  taxonomy_reference.md
scripts/: _analysis_utils.py  analyze_emotion_errors.py  analyze_genre_errors.py  app.py  asr_genre_breakdown.py  build_retrieval_index.py  cache_models.py  calibrate_genre.py  comprehensive_ablation_table.py  compute_confidence_intervals.py  compute_dms.py  convert_sada_to_jsonl.py  demo.py  demo_smoke_test.py  eda.py  eval_trained_models.py  evaluate_asr.py  evaluate_emotion_fusion.py  evaluate_emotion_partial_credit.py  evaluate_retrieval.py  evaluate_retrieval_ablation.py  evaluate_retrieval_rerank.py  evaluate_simclr_probe.py  finetune_whisper.py  genre_conditioned_emotion.py  make_emotion_sweep_summary.py  plot_confusion_matrices.py  poem_tfidf.py  pretrain_audio_simclr.py  rerun_hierarchical_eval.py  rerun_multitask_eval.py  run_baseline.py  run_diagnostics.py  soft_cer_sensitivity.py  stratified_genre_cv.py  train_arousal.py  train_audio_cnn.py  train_cnn_ablation.py  train_emotion_bilstm.py  train_fusion.py  (+6 more)
src/: config.py
tests/: test_app_inference_helpers.py  test_dataset.py  test_emotion_aggregate.py  test_labels.py  test_schema.py  test_split.py
(+22 files in other folders)
