[project]
name = "nabat-ai"
version = "0.1.0"
description = "Multimodal deep learning system for Khaleeji (Nabati) Arabic poetry: ASR, genre classification, arousal detection, and semantic retrieval."
authors = [{ name = "Asma Salem Mubarak Najem Aljneibi" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "faiss-cpu>=1.9.0",
    "tensorboard>=2.19.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "peft>=0.18.1",
    "gradio>=5.0.0",
    "setuptools<70",
    "plotly>=6.6.0",
    "demucs>=4.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
